fix spillover

--- a/src/components/EventCard.scss
+++ b/src/components/EventCard.scss
@@ -18,9 +18,10 @@
     p {
         margin: 4px 0;
     }
+
 }
 
-.event-card:before{
+.event-card:before {
     position: absolute;
     content: '';
     top: -5px;
@@ -58,9 +59,6 @@
 
 .event-cart__time_location_and_attire {
     flex: 1 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
 }
 
 .event-card__date,
